# ansys-tools-path

./: .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  codecov.yml  index.html  pyproject.toml  robots.txt  sitemap.xml  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: approver.yml  ci_cd.yml  label.yml
doc/: .vale.ini  Makefile
doc/changelog.d/: 303.added.md  307.dependencies.md  311.dependencies.md  315.maintenance.md  321.dependencies.md  331.maintenance.md  333.dependencies.md  336.dependencies.md  337.dependencies.md  339.dependencies.md  342.maintenance.md  343.dependencies.md  344.dependencies.md  346.maintenance.md
doc/source/: API.rst  changelog.rst  conf.py  index.rst  links.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
src/ansys/tools/path/: __init__.py  misc.py  path.py  save.py
src/ansys/tools/path/applications/: __init__.py  dyna.py  mapdl.py  mechanical.py
tests/: conftest.py  test_metadata.py  test_misc.py  test_path.py
tests/integration/: test_integration.py
tests/unit/: test_metadata.py  test_misc.py  test_path.py
version/: index.html
version/0.1/: .buildinfo  announcement.html  api.html  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.1/_sources/: contribute.rst.txt
version/0.2/: .buildinfo  api.html  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.3/: .buildinfo  announcement.html  api.html  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.3/_sources/: index.rst.txt
version/0.4/: .buildinfo  announcement.html  api.html  contribute.html  genindex.html  index.html  objects.inv  search.html
version/0.4/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.5/: .buildinfo  api.html  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.5/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.6/: .buildinfo  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.6/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/0.6/_sources/: api.rst.txt  index.rst.txt
version/0.7/: contribute.html  genindex.html  index.html  objects.inv  search.html
version/0.7/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.get_available_ansys_installations.html
version/0.7/_sources/: index.rst.txt
version/0.7/_sources/api/ansys/tools/path/: index.rst.txt
version/0.7/_sources/api/ansys/tools/path/path/: index.rst.txt
version/0.7/_sources/api/ansys/tools/path/save/: index.rst.txt
version/0.7/api/ansys/tools/path/: announcement.html  index.html
version/0.7/api/ansys/tools/path/applications/: ApplicationPlugin.html  index.html
version/0.7/api/ansys/tools/path/applications/dyna/: index.html
version/0.7/api/ansys/tools/path/applications/mapdl/: index.html
version/0.7/api/ansys/tools/path/applications/mechanical/: index.html
version/0.7/api/ansys/tools/path/misc/: index.html
version/0.7/api/ansys/tools/path/path/: index.html
version/0.7/api/ansys/tools/path/save/: index.html
version/0.8/: changelog.html  genindex.html  index.html  py-modindex.html
version/0.8/api/: index.html
version/0.8/api/ansys/tools/path/: index.html
version/0.8/api/ansys/tools/path/applications/: index.html
version/dev/: .buildinfo  api.html  changelog.html  contribute.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.get_available_ansys_installations.html  ansys.tools.path.save_ansys_path.html
version/dev/_sources/: index.rst.txt
version/dev/_sources/api/ansys/tools/path/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/tools/path/: index.html
version/dev/api/ansys/tools/path/applications/: ApplicationPlugin.html  index.html
version/dev/api/ansys/tools/path/misc/: index.html
version/dev/api/ansys/tools/path/path/: index.html
version/dev/api/ansys/tools/path/save/: index.html
version/stable/: api.html  contribute.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_autosummary/: ansys.tools.path.change_default_ansys_path.html  ansys.tools.path.find_ansys.html  ansys.tools.path.save_ansys_path.html
version/stable/_sources/: index.rst.txt
version/stable/_sources/api/: index.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/api/ansys/tools/path/applications/: ApplicationPlugin.html  index.html
version/stable/api/ansys/tools/path/misc/: index.html
version/stable/api/ansys/tools/path/path/: index.html
version/stable/api/ansys/tools/path/save/: index.html
(+19 files in other folders)
