[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-tools-path"
version = "0.5.2"
description = "Library to locate Ansys products in a local machine."
readme = "README.rst"
requires-python = ">=3.8,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=3.6.0",
    "click>=8.1.3",        # for CLI interface
]


[project.optional-dependencies]
tests = ["pytest==8.1.1", "pytest-cov==5.0.0", "pyfakefs==5.4.1"]

doc = [
    "Sphinx==7.2.6",
    "numpydoc==1.7.0",
    "ansys-sphinx-theme==0.15.2",
    "sphinx-copybutton==0.5.2",
]

build = ["build==1.2.1", "twine==5.0.0"]

[tool.flit.module]
name = "ansys.tools.path"

[project.scripts]
save-ansys-path = "ansys.tools.path.save:cli"

[project.urls]
Source = "https://github.com/ansys/ansys-tools-path"
Tracker = "https://github.com/ansys/ansys-tools-path/issues"
Homepage = "https://github.com/ansys/ansys-tools-path"
Documentation = "https://path.tools.docs.pyansys.com"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.flake8]
max-line-length = 100

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = ["win32: Mark a test windows only", "linux: Mark a test linux only"]
