[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-tools-path"
version = "0.8.0"
description = "Library to locate Ansys products in a local machine."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-tools-common"
]


[project.optional-dependencies]
tests = ["pytest==8.4.1", "pytest-cov==6.2.1", "pyfakefs==5.10.2"]

doc = [
    "Sphinx==8.2.3",
    "ansys-sphinx-theme[autoapi]==1.5.3",
    "numpydoc==1.9.0",
    "sphinx-copybutton==0.5.2",
]

build = ["build==1.3.0", "twine==6.1.0"]

[tool.flit.module]
name = "ansys.tools.path"

[project.scripts]
save-ansys-path = "ansys.tools.path.save:cli"

[project.urls]
Source = "https://github.com/ansys/ansys-tools-path"
Tracker = "https://github.com/ansys/ansys-tools-path/issues"
Homepage = "https://github.com/ansys/ansys-tools-path"
Documentation = "https://path.tools.docs.pyansys.com"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.flake8]
max-line-length = 100

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = ["win32: Mark a test windows only", "linux: Mark a test linux only"]

[tool.towncrier]
package = "ansys.tools.path"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/ansys-tools-path/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/ansys-tools-path/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
